--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -1816,6 +1816,10 @@ div.collapse.no-abstract.expanded-not > .disclosure-button .part::before {
     --collapse-toggle-bottom-height: calc(2.375 * var(--base-font-size));
 }
 
+.collapse.bare-content.has-abstract.expanded > .collapse-content-wrapper {
+	padding: 0 0 0.5em 0;
+}
+
 .collapse.bare-content.no-abstract.expanded-not > .collapse-content-wrapper {
     padding: 0.25em 0.5em;
 }
@@ -2306,18 +2310,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -5232,14 +5236,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popups).
  */
 .popup.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popup.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -5380,7 +5384,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -5835,14 +5839,14 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 /*  Loading spinner (for object popins).
  */
 .popin.loading::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#circle-notch-light');
     animation: fa-spin 2s infinite linear;
 }
 
 /*  Rendering spinner.
  */
 .popin.rendering::before {
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#spinner-third-light');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#spinner-third-light');
     animation: fa-spin 3s infinite linear;
 }
 
@@ -6745,7 +6749,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#question');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7311,7 +7315,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1698021605#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1699157525#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7386,7 +7390,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1698021605#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1699157525#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
